--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@payloadcms/richtext-lexical": "beta",
     "@payloadcms/storage-s3": "beta",
     "cross-env": "^7.0.3",
+    "framer-motion": "11.0.15",
     "graphql": "^16.8.1",
+    "lucide-react": "^0.439.0",
     "next": "15.0.0-canary.104",
     "payload": "beta",
     "react": "19.0.0-rc-06d0b89e-20240801",
     "react-dom": "19.0.0-rc-06d0b89e-20240801",
-    "sharp": "0.32.6"
+    "sharp": "0.32.6",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
